--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@sveltejs/adapter-auto": "^6.0.0",
     "@sveltejs/kit": "^2.16.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
-    "postcss": "^8.5.3",
     "svelte": "^5.0.0",
     "tailwindcss": "^4.1.7",
     "vite": "^6.2.6"
+  },
+  "dependencies": {
+    "@tailwindcss/vite": "^4.1.7"
   }
 }
